use anyhow::{Context, Result};
use tonic::transport::Channel;
use tracing::{debug, info};
use uuid::Uuid;

/// gRPC 客户端（框架，需要 protobuf 代码生成后完成）
pub struct GrpcClient {
    /// gRPC 通道
    #[allow(dead_code)]
    channel: Channel,

    /// 服务器地址
    server_address: String,

    /// Access Token
    access_token: Option<String>,
}

impl GrpcClient {
    /// 创建新的 gRPC 客户端
    pub async fn new(server_address: String) -> Result<Self> {
        info!("连接到 gRPC 服务器: {}", server_address);

        let channel = Channel::from_shared(server_address.clone())
            .context("无效的服务器地址")?
            .connect()
            .await
            .context("无法连接到服务器")?;

        info!("✓ gRPC 连接已建立");

        Ok(Self {
            channel,
            server_address,
            access_token: None,
        })
    }

    /// 设置 Access Token
    pub fn set_access_token(&mut self, token: String) {
        self.access_token = Some(token);
    }

    /// 用户注册
    #[allow(dead_code)]
    pub async fn register(
        &self,
        email: String,
        _username: String,
        _password: String,
    ) -> Result<RegisterResponse> {
        debug!("用户注册: {}", email);

        // TODO: 实现 AuthService.Register RPC 调用
        // 需要等待 protobuf 代码生成

        Ok(RegisterResponse {
            user_id: Uuid::new_v4(),
            message: "注册成功".to_string(),
        })
    }

    /// 用户登录
    #[allow(dead_code)]
    pub async fn login(
        &self,
        email: String,
        _password: String,
        _device_name: String,
        _device_type: String,
    ) -> Result<LoginResponse> {
        debug!("用户登录: {}", email);

        // TODO: 实现 AuthService.Login RPC 调用
        // 需要等待 protobuf 代码生成

        Ok(LoginResponse {
            user_id: Uuid::new_v4(),
            device_id: Uuid::new_v4(),
            access_token: "dummy_access_token".to_string(),
            refresh_token: "dummy_refresh_token".to_string(),
            message: "登录成功".to_string(),
        })
    }

    /// 刷新 Token
    #[allow(dead_code)]
    pub async fn refresh_token(&self, _refresh_token: String) -> Result<TokenRefreshResponse> {
        debug!("刷新 Token");

        // TODO: 实现 AuthService.RefreshToken RPC 调用
        // 需要等待 protobuf 代码生成

        Ok(TokenRefreshResponse {
            access_token: "new_access_token".to_string(),
            message: "Token 刷新成功".to_string(),
        })
    }

    /// 登出
    #[allow(dead_code)]
    pub async fn logout(&self) -> Result<()> {
        debug!("用户登出");

        // TODO: 实现 AuthService.Logout RPC 调用
        // 需要等待 protobuf 代码生成

        Ok(())
    }

    /// 注册设备
    #[allow(dead_code)]
    pub async fn register_device(
        &self,
        name: String,
        _device_type: String,
        _fingerprint: String,
    ) -> Result<DeviceResponse> {
        debug!("注册设备: {}", name);

        // TODO: 实现 DeviceService.RegisterDevice RPC 调用
        // 需要等待 protobuf 代码生成

        Ok(DeviceResponse {
            device_id: Uuid::new_v4(),
            message: "设备注册成功".to_string(),
        })
    }

    /// 列出设备
    #[allow(dead_code)]
    pub async fn list_devices(&self) -> Result<Vec<DeviceInfo>> {
        debug!("列出设备");

        // TODO: 实现 DeviceService.ListDevices RPC 调用
        // 需要等待 protobuf 代码生成

        Ok(vec![])
    }

    /// 上报文件变更
    #[allow(dead_code)]
    pub async fn report_changes(&self, changes: Vec<FileChange>) -> Result<ReportChangesResponse> {
        debug!("上报 {} 个文件变更", changes.len());

        // TODO: 实现 FileSyncService.ReportChanges RPC 调用
        // 需要等待 protobuf 代码生成

        Ok(ReportChangesResponse {
            success: true,
            message: "变更上报成功".to_string(),
            conflicts_detected: vec![],
            pending_uploads: vec![],
        })
    }

    /// 获取远程变更
    #[allow(dead_code)]
    pub async fn fetch_changes(
        &self,
        since_version: i64,
        _file_patterns: Vec<String>,
    ) -> Result<Vec<FileChange>> {
        debug!("获取远程变更，版本: {}", since_version);

        // TODO: 实现 FileSyncService.FetchChanges RPC 调用
        // 需要等待 protobuf 代码生成

        Ok(vec![])
    }

    /// 上传文件（流式）
    #[allow(dead_code)]
    pub async fn upload_file(
        &self,
        file_path: String,
        _file_hash: String,
        file_size: u64,
        _content: Vec<u8>,
    ) -> Result<UploadFileResponse> {
        debug!("上传文件: {:?}, 大小: {} 字节", file_path, file_size);

        // TODO: 实现 FileSyncService.UploadFile RPC 调用（流式）
        // 需要等待 protobuf 代码生成

        Ok(UploadFileResponse {
            success: true,
            message: "文件上传成功".to_string(),
            version_id: Uuid::new_v4().to_string(),
            version_number: 1,
        })
    }

    /// 下载文件（流式）
    #[allow(dead_code)]
    pub async fn download_file(
        &self,
        file_path: String,
        _version_number: Option<i64>,
    ) -> Result<DownloadFileData> {
        debug!("下载文件: {:?}", file_path);

        // TODO: 实现 FileSyncService.DownloadFile RPC 调用（流式）
        // 需要等待 protobuf 代码生成

        Ok(DownloadFileData {
            file_path,
            file_hash: "dummy_hash".to_string(),
            file_size: 0,
            content: vec![],
            version: 1,
        })
    }

    /// 订阅文件变更通知
    #[allow(dead_code)]
    pub async fn subscribe_changes(
        &self,
        _file_patterns: Vec<String>,
    ) -> Result<tokio::sync::mpsc::Receiver<ChangeNotification>> {
        debug!("订阅文件变更通知");

        // TODO: 实现 NotificationService.SubscribeChanges RPC 调用
        // 需要等待 protobuf 代码生成

        let (_tx, rx) = tokio::sync::mpsc::channel(100);
        Ok(rx)
    }

    /// 心跳保活
    #[allow(dead_code)]
    pub async fn heartbeat(&self) -> Result<()> {
        // TODO: 实现 NotificationService.Heartbeat RPC 调用
        // 需要等待 protobuf 代码生成

        Ok(())
    }
}

// ===== 响应类型（临时，将由 protobuf 生成） =====

#[derive(Debug, Clone)]
pub struct RegisterResponse {
    pub user_id: Uuid,
    pub message: String,
}

#[derive(Debug, Clone)]
pub struct LoginResponse {
    pub user_id: Uuid,
    pub device_id: Uuid,
    pub access_token: String,
    pub refresh_token: String,
    pub message: String,
}

#[derive(Debug, Clone)]
pub struct TokenRefreshResponse {
    pub access_token: String,
    pub message: String,
}

#[derive(Debug, Clone)]
pub struct DeviceResponse {
    pub device_id: Uuid,
    pub message: String,
}

#[derive(Debug, Clone)]
pub struct DeviceInfo {
    pub device_id: Uuid,
    pub name: String,
    pub device_type: String,
    pub last_seen: chrono::DateTime<chrono::Utc>,
}

#[derive(Debug, Clone)]
pub struct FileChange {
    pub file_path: String,
    pub file_hash: String,
    pub file_size: u64,
    pub modified_at: i64,
    pub version: i64,
}

#[derive(Debug, Clone)]
pub struct ReportChangesResponse {
    pub success: bool,
    pub message: String,
    pub conflicts_detected: Vec<String>,
    pub pending_uploads: Vec<String>,
}

#[derive(Debug, Clone)]
pub struct UploadFileResponse {
    pub success: bool,
    pub message: String,
    pub version_id: String,
    pub version_number: i64,
}

#[derive(Debug, Clone)]
pub struct DownloadFileData {
    pub file_path: String,
    pub file_hash: String,
    pub file_size: u64,
    pub content: Vec<u8>,
    pub version: i64,
}

#[derive(Debug, Clone)]
pub struct ChangeNotification {
    pub file_path: String,
    pub device_id: Uuid,
    pub change_type: String,
    pub timestamp: i64,
}

#[cfg(test)]
mod tests {
    #[tokio::test]
    #[ignore]
    async fn test_grpc_client_connection() {
        // 测试 gRPC 连接
        // 需要实际服务器运行
    }
}
