mod config;
mod conflict;
mod connection_pool;
mod error;
mod grpc_client;
mod monitoring;
mod network;
mod retry;
mod rules;
mod sync;
mod token;
mod transfer;
mod watcher;

use anyhow::Result;
use clap::{Parser, Subcommand};
use config::ClientConfig;
use conflict::{ConflictResolver, ResolutionStrategy};
use indicatif::{ProgressBar, ProgressStyle};
use monitoring::MonitoringManager;
use rules::RuleEngine;
use std::sync::Arc;
use sync::SyncEngine;
use token::TokenManager;
use tracing::{info, Level};
use transfer::TransferManager;
use uuid::Uuid;

/// Claude CLI é…ç½®åŒæ­¥å·¥å…·
#[derive(Parser, Debug)]
#[command(name = "claude-sync")]
#[command(author = "Claude Sync Team")]
#[command(version = "0.1.0")]
#[command(about = "Sync Claude CLI configuration across multiple devices", long_about = None)]
struct Cli {
    #[command(subcommand)]
    command: Commands,
}

#[derive(Subcommand, Debug)]
enum Commands {
    /// åˆå§‹åŒ–é…ç½®
    ConfigInit,

    /// ç™»å½•åˆ°æœåŠ¡å™¨
    Login {
        /// é‚®ç®±
        #[arg(short, long)]
        email: Option<String>,

        /// å¯†ç 
        #[arg(short, long)]
        password: Option<String>,

        /// è®¾å¤‡åç§°
        #[arg(short, long)]
        device_name: Option<String>,
    },

    /// ç™»å‡º
    Logout,

    /// å¼€å§‹åŒæ­¥
    Sync {
        /// åŒæ­¥æ¨¡å¼ (incremental/full/selective)
        #[arg(short, long, default_value = "incremental")]
        mode: String,

        /// åå°è¿è¡Œï¼ˆå®ˆæŠ¤è¿›ç¨‹ï¼‰
        #[arg(short, long)]
        daemon: bool,

        /// æ˜¾ç¤ºè¯¦ç»†è¾“å‡º
        #[arg(short, long)]
        verbose: bool,
    },

    /// æŸ¥çœ‹è®¾å¤‡åˆ—è¡¨
    ListDevices,

    /// æŸ¥çœ‹åŒæ­¥çŠ¶æ€
    Status,

    /// ç®¡ç†åŒæ­¥è§„åˆ™
    Rules {
        #[command(subcommand)]
        rule_command: RuleCommands,
    },

    /// æ£€æŸ¥å¥åº·çŠ¶æ€
    HealthCheck,

    /// å¯¼å‡ºæ€§èƒ½æŒ‡æ ‡
    Metrics {
        /// è¾“å‡ºæ ¼å¼ (json/prometheus)
        #[arg(short, long, default_value = "json")]
        format: String,

        /// è¾“å‡ºæ–‡ä»¶è·¯å¾„ï¼ˆå¯é€‰ï¼Œé»˜è®¤è¾“å‡ºåˆ°æ§åˆ¶å°ï¼‰
        #[arg(short, long)]
        output: Option<String>,
    },
}

#[derive(Subcommand, Debug)]
enum RuleCommands {
    /// åˆ—å‡ºæ‰€æœ‰è§„åˆ™
    List,

    /// æ·»åŠ æ–°è§„åˆ™
    Add {
        /// è§„åˆ™åç§°
        #[arg(short, long)]
        name: String,

        /// è§„åˆ™ç±»å‹ (include/exclude)
        #[arg(short, long)]
        rule_type: String,

        /// æ–‡ä»¶æ¨¡å¼
        #[arg(short, long)]
        pattern: String,

        /// æ–‡ä»¶ç±»å‹
        #[arg(short, long)]
        file_type: Option<String>,

        /// ä¼˜å…ˆçº§
        #[arg(short, long, default_value_t = 0)]
        priority: i32,
    },

    /// åˆ é™¤è§„åˆ™
    Remove {
        /// è§„åˆ™ ID
        rule_id: String,
    },

    /// åº”ç”¨æ¨èè§„åˆ™
    Recommended,
}

#[tokio::main]
async fn main() -> Result<()> {
    let cli = Cli::parse();

    // åˆå§‹åŒ–æ—¥å¿—
    let log_level = if matches!(cli.command, Commands::Sync { verbose: true, .. }) {
        Level::DEBUG
    } else {
        Level::INFO
    };

    tracing_subscriber::fmt()
        .with_max_level(log_level)
        .with_target(false)
        .init();

    info!("ğŸš€ Claude Sync Client v0.1.0");

    match cli.command {
        Commands::ConfigInit => {
            handle_config_init().await?;
        }
        Commands::Login {
            email,
            password,
            device_name,
        } => {
            handle_login(email, password, device_name).await?;
        }
        Commands::Logout => {
            handle_logout().await?;
        }
        Commands::Sync {
            mode,
            daemon,
            verbose,
        } => {
            handle_sync(mode, daemon, verbose).await?;
        }
        Commands::ListDevices => {
            handle_list_devices().await?;
        }
        Commands::Status => {
            handle_status().await?;
        }
        Commands::Rules { rule_command } => {
            handle_rules(rule_command).await?;
        }
        Commands::HealthCheck => {
            handle_health_check().await?;
        }

        Commands::Metrics { format, output } => {
            handle_metrics(format, output).await?;
        }
    }

    Ok(())
}

/// å¤„ç†é…ç½®åˆå§‹åŒ–
async fn handle_config_init() -> Result<()> {
    info!("åˆå§‹åŒ–é…ç½®...");

    let config = ClientConfig::default();
    let config_path = ClientConfig::config_path()?;

    // ä¿å­˜é»˜è®¤é…ç½®
    config.save(&config_path)?;

    // åˆå§‹åŒ–ç›®å½•
    config.initialize()?;

    println!("âœ“ é…ç½®å·²åˆå§‹åŒ–: {:?}", config_path);
    println!("\né…ç½®æ–‡ä»¶ä½ç½®: {:?}", config_path);
    println!("Claude ç›®å½•: {:?}", config.sync.claude_dir);
    println!("\nğŸ’¡ æç¤º: è¯·ç¼–è¾‘é…ç½®æ–‡ä»¶è®¾ç½®æœåŠ¡å™¨åœ°å€");

    Ok(())
}

/// å¤„ç†ç™»å½•
async fn handle_login(
    email: Option<String>,
    password: Option<String>,
    device_name: Option<String>,
) -> Result<()> {
    info!("ç™»å½•åˆ°æœåŠ¡å™¨...");

    // åŠ è½½é…ç½®
    let config = ClientConfig::load()?;
    config.validate()?;

    // äº¤äº’å¼è¾“å…¥
    let email = email.unwrap_or_else(|| {
        dialoguer::Input::new()
            .with_prompt("é‚®ç®±")
            .interact()
            .unwrap()
    });

    let password = password.unwrap_or_else(|| {
        dialoguer::Password::new()
            .with_prompt("å¯†ç ")
            .interact()
            .unwrap()
    });

    let device_name = device_name.unwrap_or_else(|| {
        let hostname = gethostname::gethostname().to_string_lossy().to_string();
        format!("{}-{}", hostname, std::env::consts::OS)
    });

    // åˆ›å»º gRPC å®¢æˆ·ç«¯
    let client = grpc_client::GrpcClient::new(config.server.address.clone()).await?;

    // è°ƒç”¨ç™»å½• API
    let response = client
        .login(email.clone(), password, device_name, "desktop".to_string())
        .await?;

    // ä¿å­˜ Token
    let token_manager = TokenManager::new(
        config.auth.token_dir,
        config.auth.encryption_key,
        "dummy_jwt_secret".to_string(), // TODO: ä»é…ç½®è·å–
    );

    let tokens = token::TokenStorage {
        access_token: response.access_token.clone(),
        refresh_token: response.refresh_token.clone(),
        device_id: response.device_id.to_string(),
        user_id: response.user_id.to_string(),
        access_expires_at: chrono::Utc::now().timestamp() + 3600, // 1 å°æ—¶
        refresh_expires_at: chrono::Utc::now().timestamp() + 30 * 24 * 3600, // 30 å¤©
    };

    token_manager.save_tokens(tokens)?;

    println!("âœ“ ç™»å½•æˆåŠŸ");
    println!("ç”¨æˆ· ID: {}", response.user_id);
    println!("è®¾å¤‡ ID: {}", response.device_id);
    println!("\nğŸ’¡ æç¤º: è¿è¡Œ 'claude-sync sync' å¼€å§‹åŒæ­¥");

    Ok(())
}

/// å¤„ç†ç™»å‡º
async fn handle_logout() -> Result<()> {
    info!("ç™»å‡º...");

    let config = ClientConfig::load()?;
    let token_manager = TokenManager::new(
        config.auth.token_dir,
        config.auth.encryption_key,
        "dummy_jwt_secret".to_string(),
    );

    // æ£€æŸ¥æ˜¯å¦å·²ç™»å½•
    if !token_manager.has_tokens() {
        println!("âš ï¸  æœªç™»å½•");
        return Ok(());
    }

    // TODO: è°ƒç”¨æœåŠ¡å™¨ç™»å‡º API

    // åˆ é™¤æœ¬åœ° Token
    token_manager.delete_tokens()?;

    println!("âœ“ å·²ç™»å‡º");

    Ok(())
}

/// å¤„ç†åŒæ­¥
async fn handle_sync(mode: String, daemon: bool, _verbose: bool) -> Result<()> {
    info!("å¼€å§‹åŒæ­¥ (æ¨¡å¼: {})", mode);

    // åŠ è½½é…ç½®
    let config = Arc::new(ClientConfig::load()?);
    config.validate()?;

    // æ£€æŸ¥ç™»å½•çŠ¶æ€
    let token_manager = TokenManager::new(
        config.auth.token_dir.clone(),
        config.auth.encryption_key.clone(),
        "dummy_jwt_secret".to_string(),
    );

    if !token_manager.has_tokens() {
        anyhow::bail!("æœªç™»å½•ï¼Œè¯·å…ˆè¿è¡Œ 'claude-sync login'");
    }

    // è·å–ç”¨æˆ·å’Œè®¾å¤‡ ID
    let user_id = Uuid::parse_str(&token_manager.get_user_id()?)?;
    let device_id = Uuid::parse_str(&token_manager.get_device_id()?)?;

    // åˆ›å»ºè§„åˆ™å¼•æ“
    let rule_engine = Arc::new(RuleEngine::from_rules(config.sync.rules.clone()));

    // åˆ›å»ºä¼ è¾“ç®¡ç†å™¨
    let transfer_manager = Arc::new(TransferManager::new(
        config.performance.max_concurrent_uploads,
        config.performance.max_concurrent_downloads,
        config.performance.upload_retries,
        config.performance.download_retries,
        config.performance.retry_delay,
    ));

    // åˆ›å»ºå†²çªè§£å†³å™¨
    let conflict_resolver = Arc::new(ConflictResolver::new(
        match config.conflict.default_strategy.as_str() {
            "keep_local" => ResolutionStrategy::KeepLocal,
            "keep_remote" => ResolutionStrategy::KeepRemote,
            "keep_newer" => ResolutionStrategy::KeepNewer,
            _ => ResolutionStrategy::Manual,
        },
        config.conflict.auto_merge_text,
        config.conflict.auto_merge_structured,
    ));

    // åˆ›å»ºåŒæ­¥å¼•æ“
    let sync_engine = SyncEngine::new(
        config.clone(),
        rule_engine,
        transfer_manager,
        conflict_resolver,
        user_id,
        device_id,
    );

    match mode.as_str() {
        "full" => {
            // å…¨é‡åŒæ­¥
            println!("ğŸ”„ å¼€å§‹å…¨é‡åŒæ­¥...");
            let summary = sync_engine.run_full_sync().await?;

            println!("\nâœ“ å…¨é‡åŒæ­¥å®Œæˆ");
            println!("æˆåŠŸ: {}", summary.synced_count);
            println!("å¤±è´¥: {}", summary.failed_count);
            println!("å†²çª: {}", summary.conflict_count);

            if !summary.conflicts.is_empty() {
                println!("\nå†²çªæ–‡ä»¶:");
                for path in &summary.conflicts {
                    println!("  - {:?}", path);
                }
            }

            if !summary.errors.is_empty() {
                println!("\né”™è¯¯:");
                for (path, error) in &summary.errors {
                    println!("  - {:?}: {}", path, error);
                }
            }
        }
        "incremental" => {
            // å¢é‡åŒæ­¥ï¼ˆå®æ—¶ç›‘æ§ï¼‰
            if daemon {
                println!("ğŸ”„ åå°ç›‘æ§æ¨¡å¼ï¼ˆæŒ‰ Ctrl+C åœæ­¢ï¼‰");
                // TODO: å¯åŠ¨æ–‡ä»¶ç›‘æ§å’Œå®æ—¶åŒæ­¥
                println!("âš ï¸  å®æ—¶åŒæ­¥åŠŸèƒ½éœ€è¦ç­‰å¾… protobuf ä»£ç ç”Ÿæˆ");
            } else {
                println!("âš ï¸  å¢é‡åŒæ­¥éœ€è¦åå°æ¨¡å¼è¿è¡Œ");
                println!("ğŸ’¡ ä½¿ç”¨: claude-sync sync --daemon");
            }
        }
        "selective" => {
            // é€‰æ‹©æ€§åŒæ­¥
            println!("ğŸ”„ é€‰æ‹©æ€§åŒæ­¥...");
            // TODO: å®ç°é€‰æ‹©æ€§åŒæ­¥
            println!("âš ï¸  é€‰æ‹©æ€§åŒæ­¥åŠŸèƒ½å¼€å‘ä¸­");
        }
        _ => {
            anyhow::bail!("æ— æ•ˆçš„åŒæ­¥æ¨¡å¼: {}", mode);
        }
    }

    Ok(())
}

/// å¤„ç†è®¾å¤‡åˆ—è¡¨
async fn handle_list_devices() -> Result<()> {
    info!("è·å–è®¾å¤‡åˆ—è¡¨...");

    // TODO: å®ç° gRPC è°ƒç”¨
    println!("âš ï¸  æ­¤åŠŸèƒ½éœ€è¦ç­‰å¾… protobuf ä»£ç ç”Ÿæˆ");

    Ok(())
}

/// å¤„ç†çŠ¶æ€æŸ¥è¯¢
async fn handle_status() -> Result<()> {
    info!("æŸ¥è¯¢åŒæ­¥çŠ¶æ€...");

    let config = ClientConfig::load()?;

    let token_manager = TokenManager::new(
        config.auth.token_dir,
        config.auth.encryption_key,
        "dummy_jwt_secret".to_string(),
    );

    if !token_manager.has_tokens() {
        println!("âš ï¸  æœªç™»å½•");
        return Ok(());
    }

    println!("âœ“ å·²ç™»å½•");
    println!("ç”¨æˆ· ID: {}", token_manager.get_user_id()?);
    println!("è®¾å¤‡ ID: {}", token_manager.get_device_id()?);

    // æ£€æŸ¥ Token è¿‡æœŸæ—¶é—´
    if token_manager.is_access_expired()? {
        println!("âš ï¸  Access Token å·²è¿‡æœŸï¼Œéœ€è¦åˆ·æ–°");
    } else if token_manager.needs_refresh(config.auth.refresh_before as i64)? {
        println!("âš ï¸  Access Token å³å°†è¿‡æœŸ");
    } else {
        println!("âœ“ Access Token æœ‰æ•ˆ");
    }

    // TODO: æ˜¾ç¤ºåŒæ­¥çŠ¶æ€ç»Ÿè®¡

    Ok(())
}

/// å¤„ç†è§„åˆ™å‘½ä»¤
async fn handle_rules(command: RuleCommands) -> Result<()> {
    info!("ç®¡ç†åŒæ­¥è§„åˆ™...");

    let mut config = ClientConfig::load()?;

    match command {
        RuleCommands::List => {
            println!("åŒæ­¥è§„åˆ™:");
            println!(
                "{:<5} {:<20} {:<10} {:<30}",
                "ä¼˜å…ˆçº§", "åç§°", "ç±»å‹", "æ¨¡å¼"
            );
            println!("{}", "-".repeat(70));

            for rule in &config.sync.rules {
                let rule_type_str = match rule.rule_type {
                    rules::RuleType::Include => "include",
                    rules::RuleType::Exclude => "exclude",
                };
                println!(
                    "{:<5} {:<20} {:<10} {:<30}",
                    rule.priority, rule.name, rule_type_str, rule.pattern
                );
            }

            if config.sync.rules.is_empty() {
                println!("(æ— è§„åˆ™)");
            }
        }
        RuleCommands::Add {
            name,
            rule_type,
            pattern,
            file_type,
            priority,
        } => {
            // éªŒè¯è§„åˆ™ç±»å‹
            let rule_type_enum = match rule_type.as_str() {
                "include" => rules::RuleType::Include,
                "exclude" => rules::RuleType::Exclude,
                _ => anyhow::bail!("æ— æ•ˆçš„è§„åˆ™ç±»å‹: {}", rule_type),
            };

            let new_rule = rules::SyncRule {
                id: Uuid::new_v4().to_string(),
                name: name.clone(),
                rule_type: rule_type_enum,
                pattern,
                pattern_type: rules::PatternType::Glob, // é»˜è®¤ä½¿ç”¨ Glob
                file_type,
                priority,
                enabled: true,
                description: None,
            };

            // éªŒè¯è§„åˆ™
            RuleEngine::validate_rule(&new_rule)?;

            // æ·»åŠ åˆ°é…ç½®
            config.sync.rules.push(new_rule);

            // ä¿å­˜é…ç½®
            let config_path = ClientConfig::config_path()?;
            config.save(&config_path)?;

            println!("âœ“ è§„åˆ™å·²æ·»åŠ : {}", name);
        }
        RuleCommands::Remove { rule_id } => {
            let original_len = config.sync.rules.len();
            config.sync.rules.retain(|r| r.id != rule_id);

            if config.sync.rules.len() < original_len {
                // ä¿å­˜é…ç½®
                let config_path = ClientConfig::config_path()?;
                config.save(&config_path)?;

                println!("âœ“ è§„åˆ™å·²åˆ é™¤: {}", rule_id);
            } else {
                println!("âš ï¸  æœªæ‰¾åˆ°è§„åˆ™: {}", rule_id);
            }
        }
        RuleCommands::Recommended => {
            let recommended = RuleEngine::recommended_rules();

            println!("æ·»åŠ æ¨èè§„åˆ™:");
            for rule in &recommended {
                println!("  - {} ({})", rule.name, rule.pattern);
            }

            config.sync.rules.extend(recommended);

            // ä¿å­˜é…ç½®
            let config_path = ClientConfig::config_path()?;
            config.save(&config_path)?;

            println!("\nâœ“ æ¨èè§„åˆ™å·²æ·»åŠ ");
        }
    }

    Ok(())
}

/// å¤„ç†å¥åº·æ£€æŸ¥
async fn handle_health_check() -> Result<()> {
    info!("æ£€æŸ¥æœåŠ¡å™¨å¥åº·çŠ¶æ€...");

    let config = ClientConfig::load()?;

    // TODO: è°ƒç”¨å¥åº·æ£€æŸ¥ API
    println!("âš ï¸  æ­¤åŠŸèƒ½éœ€è¦ç­‰å¾… protobuf ä»£ç ç”Ÿæˆ");
    println!("æœåŠ¡å™¨åœ°å€: {}", config.server.address);

    Ok(())
}

/// å¤„ç†æ€§èƒ½æŒ‡æ ‡å¯¼å‡º
async fn handle_metrics(format: String, output: Option<String>) -> Result<()> {
    info!("å¯¼å‡ºæ€§èƒ½æŒ‡æ ‡...");

    // åˆ›å»ºç›‘æ§ç®¡ç†å™¨ï¼ˆå®é™…ä½¿ç”¨æ—¶åº”è¯¥ä»å…±äº«çŠ¶æ€è·å–ï¼‰
    let manager = MonitoringManager::new(1000, 1000);

    // æ ¹æ®æ ¼å¼å¯¼å‡ºæŒ‡æ ‡
    let content = match format.as_str() {
        "json" => {
            let json = manager.export_metrics_json().await?;
            json
        }
        "prometheus" => manager.export_metrics_prometheus().await,
        _ => {
            return Err(anyhow::anyhow!("ä¸æ”¯æŒçš„æ ¼å¼: {}", format));
        }
    };

    // è¾“å‡ºåˆ°æ–‡ä»¶æˆ–æ§åˆ¶å°
    if let Some(output_path) = output {
        tokio::fs::write(&output_path, content).await?;
        println!("âœ“ æŒ‡æ ‡å·²å¯¼å‡ºåˆ°: {}", output_path);
    } else {
        println!("{}", content);
    }

    // åŒæ—¶æ‰“å°æ€§èƒ½æ‘˜è¦
    manager.print_performance_summary().await;

    Ok(())
}

/// åˆ›å»ºè¿›åº¦æ¡
fn create_progress_bar(len: u64) -> ProgressBar {
    let pb = indicatif::ProgressBar::new(len);
    pb.set_style(
        ProgressStyle::default_bar()
            .template("[{elapsed_precise}] [{bar:40.cyan/blue}] {pos}/{len} ({eta})")
            .expect("æ— æ•ˆçš„è¿›åº¦æ¡æ¨¡æ¿")
            .progress_chars("##-"),
    );
    pb
}
