mod auth;
mod cache;
mod config;
mod db;
mod grpc;
mod health;
mod models;
mod server;
mod storage;

use anyhow::Result;
use server::GrpcServer;
use std::sync::Arc;
use tracing::{error, info, Level};
use tracing_subscriber;

#[tokio::main]
async fn main() -> Result<()> {
    // åˆå§‹åŒ–æ—¥å¿—
    tracing_subscriber::fmt()
        .with_max_level(Level::INFO)
        .with_target(false)
        .init();

    info!("ğŸš€ Claude Sync Server v0.1.0");
    info!("Starting server initialization...");

    // åŠ è½½é…ç½®
    let config = config::Config::from_env()?;
    config.validate()?;
    info!("âœ“ Configuration loaded and validated");

    // åˆ›å»º gRPC æœåŠ¡å™¨å®ä¾‹ï¼ˆä¼šè‡ªåŠ¨è¿æ¥æ‰€æœ‰æœåŠ¡ï¼‰
    let grpc_server = GrpcServer::new(config.clone()).await?;
    info!("âœ“ All services initialized successfully");
    info!("  - Database: Connected");
    info!("  - Redis: Connected");
    info!("  - MinIO: Connected");

    // æå–æœåŠ¡ç»„ä»¶ç”¨äºå¥åº·æ£€æŸ¥
    let pool = grpc_server.get_pool();
    let redis_pool = grpc_server.get_redis_pool();
    let storage = grpc_server.get_storage();

    // å¯åŠ¨å¥åº·æ£€æŸ¥æœåŠ¡å™¨
    let health_check_addr = config.health_check_address();
    let health_service = health::HealthCheckService::new(
        Arc::new(pool.clone()),
        Arc::new(redis_pool.clone()),
        Arc::new(storage.clone()),
    );

    tokio::spawn(async move {
        if let Err(e) = health_service.serve(health_check_addr).await {
            error!("Health check server error: {}", e);
        }
    });

    info!("âœ“ Health check server started on {}", health_check_addr);

    // TODO: å–æ¶ˆæ³¨é‡Šä¸‹é¢çš„ä»£ç ï¼ˆéœ€è¦ç­‰å¾… protobuf ç”Ÿæˆï¼‰
    /*
    // å¯åŠ¨ gRPC æœåŠ¡å™¨
    info!("ğŸ¯ Starting gRPC server on {}...", config.server_address());

    if let Err(e) = grpc_server.serve().await {
        error!("gRPC server error: {}", e);
        return Err(e.into());
    }

    info!("âœ“ gRPC server started successfully");
    */

    // ä¸´æ—¶å®ç°ï¼šæ˜¾ç¤ºæœåŠ¡å°±ç»ªçŠ¶æ€
    info!("\nğŸ‰ Server initialization completed!");
    info!("ğŸ“Š Server Status:");
    info!("  âœ“ Database: Connected and healthy");
    info!("  âœ“ Redis: Connected and healthy");
    info!("  âœ“ MinIO: Connected and healthy");
    info!("  âœ“ Health Check: Running on {}", health_check_addr);
    info!("\nâš ï¸  gRPC Server: Services initialized but not started");
    info!("   Ready services:");
    info!("   - AuthService");
    info!("   - DeviceService");
    info!("   - FileSyncService");
    info!("   - NotificationService");
    info!("\nğŸ’¡ To start the actual gRPC server:");
    info!("   1. Compile protobuf definitions: cd proto && ./build.sh");
    info!("   2. Uncomment server code in src/server.rs and src/main.rs");
    info!("   3. Rebuild: cargo build --release");
    info!("   4. Run: cargo run --release");

    // ç­‰å¾…å…³é—­ä¿¡å·
    tokio::signal::ctrl_c().await?;
    info!("\nğŸ‘‹ Received shutdown signal, shutting down gracefully...");

    // TODO: æ·»åŠ ä¼˜é›…å…³é—­é€»è¾‘
    info!("âœ“ Shutdown complete");

    Ok(())
}
