use crate::cache::{Cache, RedisPool};
use crate::config::Config;
use crate::db::DbPool;
use crate::grpc::{AuthGrpcService, DeviceGrpcService, FileSyncGrpcService, NotificationGrpcService};
use crate::storage::StorageService;
use anyhow::Result;
use std::net::SocketAddr;
use tokio::signal;
use tonic::transport::Server;
use tracing::{error, info, warn};

/// gRPC ÊúçÂä°Âô®
pub struct GrpcServer {
    config: Config,
    pool: DbPool,
    cache: Cache,
    storage: StorageService,
    redis_pool: cache::RedisPool,
}

impl GrpcServer {
    /// ÂàõÂª∫Êñ∞ÁöÑÊúçÂä°Âô®ÂÆû‰æã
    pub async fn new(config: Config) -> Result<Self> {
        // ËøûÊé•Êï∞ÊçÆÂ∫ì
        let pool = DbPool::from_config(&config).await?;

        // ËøûÊé• Redis
        let redis_pool = RedisPool::from_config(&config).await?;
        let cache = Cache::new(redis_pool.inner().clone());

        // ËøûÊé• MinIO
        let storage = StorageService::from_config(&config).await?;

        Ok(Self {
            config,
            pool,
            cache,
            storage,
            redis_pool,
        })
    }

    /// Ëé∑ÂèñÊï∞ÊçÆÂ∫ìËøûÊé•Ê±†
    pub fn get_pool(&self) -> DbPool {
        self.pool.clone()
    }

    /// Ëé∑Âèñ Redis ËøûÊé•Ê±†
    pub fn get_redis_pool(&self) -> RedisPool {
        self.redis_pool.clone()
    }

    /// Ëé∑ÂèñÂ≠òÂÇ®ÊúçÂä°
    pub fn get_storage(&self) -> StorageService {
        self.storage.clone()
    }

    /// ÂêØÂä®ÊúçÂä°Âô®
    pub async fn serve(self) -> Result<()> {
        let addr: SocketAddr = self.config.server_address().parse()?;

        info!("üöÄ Starting gRPC server on {}", addr);

        // ÂàõÂª∫ gRPC ÊúçÂä°ÂÆû‰æã
        let auth_service = AuthGrpcService::new(
            self.pool.clone(),
            self.cache.clone(),
            self.config.clone(),
        );

        let device_service = DeviceGrpcService::new(self.pool.clone());

        let sync_service = FileSyncGrpcService::new(
            self.pool.clone(),
            self.cache.clone(),
            self.storage,
        );

        let notification_service = NotificationGrpcService::new(self.pool, self.cache);

        // TODO: ÂèñÊ∂àÊ≥®Èáä‰∏ãÈù¢ÁöÑ‰ª£Á†ÅÔºàÈúÄË¶ÅÁ≠âÂæÖ protobuf ÁîüÊàêÔºâ
        /*
        let addr = SocketAddr::from(addr);

        let svc = Server::builder()
            .add_service(AuthServiceServer::new(auth_service))
            .add_service(DeviceServiceServer::new(device_service))
            .add_service(FileSyncServiceServer::new(sync_service))
            .add_service(NotificationServiceServer::new(notification_service))
            .serve(addr);

        info!("‚úì gRPC server listening on {}", addr);

        // Á≠âÂæÖ Ctrl+C
        tokio::select! {
            result = svc => {
                match result {
                    Ok(_) => {
                        info!("Server completed successfully");
                        Ok(())
                    }
                    Err(e) => {
                        error!("Server error: {}", e);
                        Err(e.into())
                    }
                }
            }
            _ = Self::shutdown_signal() => {
                info!("Received shutdown signal");
                Ok(())
            }
        }
        */

        // ‰∏¥Êó∂ÂÆûÁé∞ÔºöÊ®°ÊãüÊúçÂä°Âô®ÂêØÂä®
        info!("‚ö† gRPC services initialized but not started");
        info!("   Services ready:");
        info!("   - AuthService");
        info!("   - DeviceService");
        info!("   - FileSyncService");
        info!("   - NotificationService");
        info!("\nüí° To start the actual server:");
        info!("   1. Compile protobuf definitions: cd proto && ./build.sh");
        info!("   2. Uncomment server code in src/server.rs");
        info!("   3. Run: cargo run");

        // Ê®°ÊãüÁ≠âÂæÖ‰ø°Âè∑
        Self::shutdown_signal().await?;
        info!("Shutting down...");

        Ok(())
    }

    /// Á≠âÂæÖÂÖ≥Èó≠‰ø°Âè∑
    async fn shutdown_signal() -> Result<()> {
        #[cfg(unix)]
        {
            // Unix Á≥ªÁªüÁöÑ‰ø°Âè∑Â§ÑÁêÜ
            use tokio::signal::unix::{signal, SignalKind};
            let mut sigterm = signal(SignalKind::terminate())?;
            let mut sigint = signal(SignalKind::interrupt())?;

            tokio::select! {
                _ = sigterm.recv() => {
                    info!("Received SIGTERM");
                }
                _ = sigint.recv() => {
                    info!("Received SIGINT");
                }
            }
        }

        #[cfg(windows)]
        {
            // Windows ÁöÑ‰ø°Âè∑Â§ÑÁêÜ
            let ctrl_c = tokio::signal::ctrl_c();
            ctrl_c.await?;
            info!("Received Ctrl+C");
        }

        Ok(())
    }
}

#[cfg(test)]
mod tests {
    use super::*;

    #[tokio::test]
    #[ignore]
    async fn test_server_creation() {
        let config = Config::from_env().unwrap();
        let server = GrpcServer::new(config).await;
        assert!(server.is_ok());
    }
}
