use crate::cache::Cache;
use crate::db::DbPool;
use crate::proto::claude_sync::{
    file_sync_service_server::FileSyncService, full_sync_response, incremental_sync_response,
    DownloadFileRequest, DownloadFileResponse, FetchChangesRequest, FetchChangesResponse,
    FullSyncRequest, FullSyncResponse, GetFileHistoryRequest, GetFileHistoryResponse,
    IncrementalSyncRequest, IncrementalSyncResponse, ReportChangesRequest, ReportChangesResponse,
    ResolveConflictRequest, ResolveConflictResponse, RestoreFileVersionRequest,
    RestoreFileVersionResponse, SyncComplete, SyncProgress, UploadFileRequest, UploadFileResponse,
};
use crate::storage::StorageService;
use std::pin::Pin;
use tokio_stream::wrappers::ReceiverStream;
use tonic::{Request, Response, Status};

/// FileSyncService gRPC 实现
pub struct FileSyncGrpcService {
    pool: DbPool,
    cache: Cache,
    storage: StorageService,
}

impl FileSyncGrpcService {
    /// 创建新的服务实例
    pub fn new(pool: DbPool, cache: Cache, storage: StorageService) -> Self {
        Self {
            pool,
            cache,
            storage,
        }
    }
}

#[tonic::async_trait]
impl FileSyncService for FileSyncGrpcService {
    async fn report_changes(
        &self,
        _request: Request<ReportChangesRequest>,
    ) -> Result<Response<ReportChangesResponse>, Status> {
        // TODO: 实现变更上报逻辑
        Ok(Response::new(ReportChangesResponse {
            success: true,
            message: "Report changes not yet implemented".to_string(),
            conflicts_detected: vec![],
            pending_uploads: vec![],
        }))
    }

    type FetchChangesStream =
        Pin<Box<dyn tokio_stream::Stream<Item = Result<FetchChangesResponse, Status>> + Send>>;

    async fn fetch_changes(
        &self,
        _request: Request<FetchChangesRequest>,
    ) -> Result<Response<Self::FetchChangesStream>, Status> {
        // TODO: 实现变更获取逻辑
        let (tx, rx) = tokio::sync::mpsc::channel(1);
        let _ = tx
            .send(Ok(FetchChangesResponse {
                changes: vec![],
                has_more: false,
            }))
            .await;
        Ok(Response::new(Box::pin(ReceiverStream::new(rx))))
    }

    async fn upload_file(
        &self,
        _request: Request<tonic::Streaming<UploadFileRequest>>,
    ) -> Result<Response<UploadFileResponse>, Status> {
        // TODO: 实现文件上传逻辑
        Ok(Response::new(UploadFileResponse {
            success: true,
            message: "File upload not yet implemented".to_string(),
            version_id: String::new(),
            version_number: 0,
        }))
    }

    type DownloadFileStream =
        Pin<Box<dyn tokio_stream::Stream<Item = Result<DownloadFileResponse, Status>> + Send>>;

    async fn download_file(
        &self,
        _request: Request<DownloadFileRequest>,
    ) -> Result<Response<Self::DownloadFileStream>, Status> {
        // TODO: 实现文件下载逻辑
        let (tx, rx) = tokio::sync::mpsc::channel(1);
        let _ = tx.send(Ok(DownloadFileResponse { payload: None })).await;
        Ok(Response::new(Box::pin(ReceiverStream::new(rx))))
    }

    type FullSyncStream =
        Pin<Box<dyn tokio_stream::Stream<Item = Result<FullSyncResponse, Status>> + Send>>;

    async fn full_sync(
        &self,
        _request: Request<FullSyncRequest>,
    ) -> Result<Response<Self::FullSyncStream>, Status> {
        // TODO: 实现全量同步逻辑
        let (tx, rx) = tokio::sync::mpsc::channel(1);
        let _ = tx
            .send(Ok(FullSyncResponse {
                payload: Some(full_sync_response::Payload::Progress(SyncProgress {
                    files_processed: 0,
                    total_files: 0,
                    current_file: String::new(),
                })),
            }))
            .await;
        Ok(Response::new(Box::pin(ReceiverStream::new(rx))))
    }

    type IncrementalSyncStream =
        Pin<Box<dyn tokio_stream::Stream<Item = Result<IncrementalSyncResponse, Status>> + Send>>;

    async fn incremental_sync(
        &self,
        _request: Request<IncrementalSyncRequest>,
    ) -> Result<Response<Self::IncrementalSyncStream>, Status> {
        // TODO: 实现增量同步逻辑
        let (tx, rx) = tokio::sync::mpsc::channel(1);
        let _ = tx
            .send(Ok(IncrementalSyncResponse {
                payload: Some(incremental_sync_response::Payload::Complete(SyncComplete {
                    files_uploaded: 0,
                    files_downloaded: 0,
                    files_failed: 0,
                    conflicts_detected: 0,
                })),
            }))
            .await;
        Ok(Response::new(Box::pin(ReceiverStream::new(rx))))
    }

    async fn resolve_conflict(
        &self,
        _request: Request<ResolveConflictRequest>,
    ) -> Result<Response<ResolveConflictResponse>, Status> {
        // TODO: 实现冲突解决逻辑
        Ok(Response::new(ResolveConflictResponse {
            success: true,
            message: "Conflict resolution not yet implemented".to_string(),
            new_version_id: String::new(),
        }))
    }

    async fn get_file_history(
        &self,
        _request: Request<GetFileHistoryRequest>,
    ) -> Result<Response<GetFileHistoryResponse>, Status> {
        // TODO: 实现文件历史获取逻辑
        Ok(Response::new(GetFileHistoryResponse {
            versions: vec![],
        }))
    }

    async fn restore_file_version(
        &self,
        _request: Request<RestoreFileVersionRequest>,
    ) -> Result<Response<RestoreFileVersionResponse>, Status> {
        // TODO: 实现版本恢复逻辑
        Ok(Response::new(RestoreFileVersionResponse {
            success: true,
            message: "File restore not yet implemented".to_string(),
            restored_file: None,
        }))
    }
}

#[cfg(test)]
mod tests {
    use super::*;

    #[tokio::test]
    #[ignore]
    async fn test_report_changes() {
        // 测试变更上报
    }

    #[tokio::test]
    #[ignore]
    async fn test_upload_file() {
        // 测试文件上传
    }
}
